--- a/index.html
+++ b/index.html
@@ -8,21 +8,28 @@
   <title>Geme</title>
   <!-- Socket.io -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js"></script>
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
 
 <body>
   <div id="wrap">
     <!-- Game canvas -->
-    <canvas id="canvas" width="800" height="500"></canvas>
+    <canvas id="canvas" width="900" height="506"></canvas>
     <!-- Ugly ass login shit, very temp -->
     <input type="text" placeholder="Username" id="username">
     <input type="password" placeholder="Password" id="password">
     <button onclick="sign_up()">Sign up</button> <button onclick="login()">Login</button>
+    Auto-login <input type="checkbox" id="autologin" oninput="autologin(this)">
+    <button onclick="initLeveleditor()">Level editor</button>
+
+    <div id="editor-textures"><br></div>
+
   </div>
 
   <script src="js/textures.js"></script>
   <script src="js/main.js"></script>
   <script src="js/login.js"></script>
+  <script src="js/editor.js"></script>
 
 </body>
 
