--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
     <input type="password" placeholder="Password" id="password">
     <button onclick="sign_up()">Sign up</button> <button onclick="login()">Login</button>
     Auto-login <input type="checkbox" id="autologin" oninput="autologin(this)">
-    <button onclick="initLeveleditor()">Level editor</button>
+    <button onclick="initLeveleditor()">Level editor</button> <button onclick="allItems()">Item index</button>
 
     <div id="editor-textures"><br></div>
+    <div id="all-items"> </div>
 
   </div>
 
