--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
 
       <input type="text" id="chat-input" placeholder="Chat... [ENTER]" maxlength="100">
 
-      <div id="inventory-window"></div>
+      <div id="inventory-window">
+        
+        
+      </div>
 
 
     </div>
