--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 
   </div>
 
+  <script src="textures/list.js"></script>
   <script src="js/textures.js"></script>
   <script src="js/main.js"></script>
   <script src="js/login.js"></script>
