Unequip and context menu

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
 
     </div>
 
+   
+
 
 
     <!-- Ugly ass login shit, very temp -->
@@ -47,6 +49,11 @@
     </div>
 
   </div>
+
+  <span id="context-menu">
+
+  </span>
+ 
 
   <script src="textures/list.js"></script>
   <script src="js/textures.js"></script>
