--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-  <title>Geme</title>
+  <title>Project Stugan</title>
   <!-- Socket.io -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
@@ -38,11 +38,10 @@
 
     <!-- Ugly ass login shit, very temp -->
     <div id="old-layout">
-    <input type="text" placeholder="Username" id="username">
-    <input type="password" placeholder="Password" id="password">
-    <button onclick="sign_up()">Sign up</button> <button onclick="login()">Login</button>
-    Auto-login <input type="checkbox" id="autologin" oninput="autologin(this)">
+    
+      <button onclick="logout()">Logout</button>
     <button onclick="initLeveleditor()">Level editor</button> <button onclick="allItems()">Item index</button>
+    
 
     <div id="editor-textures"><br></div>
     <div id="all-items"> </div>
@@ -53,7 +52,23 @@
   <span id="context-menu">
 
   </span>
- 
+
+  <div id="login-background">
+    <div id="login-page">
+      <img src="textures/misc/sword.png" id="login-sword" alt="">
+      <img src="textures/misc/text.png" id="login-text" alt="">
+
+      <div id="login-cred">
+      Username
+    <input type="text" placeholder="Username" id="username">
+    Password
+    <input type="password" placeholder="Password" id="password">
+    <button onclick="sign_up()" class="btn">Sign up</button> <button class="btn" onclick="login()">Login</button>
+    Auto-login <input type="checkbox" id="autologin" oninput="autologin(this)">
+  </div>
+    </div>  
+  </div>
+  
 
   <script src="textures/list.js"></script>
   <script src="js/textures.js"></script>
